testing with jest including pre-commit

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
 		"vscode": {
 			"extensions": [
 				"Supermaven.supermaven",
-				"saoudrizwan.claude-dev"
+				"saoudrizwan.claude-dev",
+				"Orta.vscode-jest"
 			]
 		}
 	}
