--- a/my-app/package.json
+++ b/my-app/package.json
@@ -37,6 +37,9 @@
     "typescript": "^5"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "next lint"
+    "*.{js,jsx,ts,tsx}": [
+      "next lint",
+      "jest --bail --findRelatedTests"
+    ]
   }
 }
